syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc-proto/gen/go/common";

enum DrawShapeType {
  IDEADrawShapeTypeNormal = 0;
  IDEADrawShapeTypePentagon = 1; //五角星
  IDEADrawShapeTypeCircle = 2; //正圆
  IDEADrawShapeTypeEllipse = 3; //椭圆
  IDEADrawShapeTypeCurve = 4; //曲线
  IDEADrawShapeTypeArrow = 5; //箭头
  IDEADrawShapeTypeStraightLine = 6; // 直线
  IDEADrawShapeTypeRectangle = 7;
  IDEADrawShapeTypeTraingle = 8;
}

// 工具类型
enum ToolType {
  IDEADrawToolTypeNone = 0;  // invalid for web
  IDEADrawToolTypePen = 1;   //
  IDEADrawToolTypeMarker = 2;//
  IDEADrawToolTypePencil = 3;// invalid for web
  IDEADrawToolTypeEraser = 4;
  IDEADrawToolTypeLasso = 5; // invalid for web
  IDEADrawShapeType = 6;
}