syntax = "proto3";

package note;

import "definitions/validate/Validate.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/note";

// 笔记绘制实体模型
message NoteDrawEntity {
  string id = 1;
  string note_id = 2 [(validate.rules).string = {min_len: 1}];
  uint32 page_number = 3 [(validate.rules).uint32 = {gt: 0}];
  string line_hex_color = 4;
  double line_alpha = 5;
  string points = 6;
  int32 path_tag = 7;
  double line_width = 8;
  string tool_type = 9;
  string draw_shape_type = 10;
}

// @api_path: /api/note/draw-entity
// @method: POST
// @content-type: application/json
// @summary: 创建笔记绘制实体
message CreateNoteDrawEntityRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
  uint32 page_number = 2 [(validate.rules).uint32 = {gt: 0}];
  string line_hex_color = 3;
  double line_alpha = 4;
  string points = 5;
  string path_tag = 6;
  double line_width = 7;
  string tool_type = 8;
  string draw_shape_type = 9;
}

message CreateNoteDrawEntityResponse {
  string id = 1;
}

// @api_path: /api/note/draw-entity
// @method: GET
// @content-type: application/json
// @summary: 获取笔记绘制实体
message GetNoteDrawEntityRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteDrawEntityResponse {
  NoteDrawEntity note_draw_entity = 1;
}

// @api_path: /api/note/draw-entity
// @method: PUT
// @content-type: application/json
// @summary: 更新笔记绘制实体
message UpdateNoteDrawEntityRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
  string line_hex_color = 2;
  double line_alpha = 3;
  string points = 4;
  string path_tag = 5;
  double line_width = 6;
  string tool_type = 7;
  string draw_shape_type = 8;
}

message UpdateNoteDrawEntityResponse {
  bool success = 1;
}

// @api_path: /api/note/draw-entity
// @method: DELETE
// @content-type: application/json
// @summary: 删除笔记绘制实体
message DeleteNoteDrawEntityRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message DeleteNoteDrawEntityResponse {
  bool success = 1;
}

// @api_path: /api/note/draw-entity/by-note
// @method: GET
// @content-type: application/json
// @summary: 根据笔记ID获取笔记绘制实体列表
message GetNoteDrawEntitiesByNoteIdRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteDrawEntitiesByNoteIdResponse {
  repeated NoteDrawEntity note_draw_entities = 1;
}

// @api_path: /api/note/draw-entity/by-note-and-page
// @method: GET
// @content-type: application/json
// @summary: 根据笔记ID和页码获取笔记绘制实体列表
message GetNoteDrawEntitiesByNoteIdAndPageRequest {
  string note_id = 1 [(validate.rules).string = {min_len: 1}];
  uint32 page_number = 2 [(validate.rules).uint32 = {gt: 0}];
}

message GetNoteDrawEntitiesByNoteIdAndPageResponse {
  repeated NoteDrawEntity note_draw_entities = 1;
}
